--- a/index.html
+++ b/index.html
@@ -200,10 +200,13 @@
   </div>
 
   <div class="link-bar">
-    <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
-    <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات من</a>
-    <a href="http://www.smoj.ir/" target="_blank">مطالعات من</a>
+    <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه</a>
+    <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات</a>
+    <a href="http://www.smojtabazadeh.ir/" target="_blank">مطالعات</a>
     <a href="http://www.instagallery.ir/" target="_blank">اینستاگالری</a>
+    <a href="https://www.mojtabazade.ir/" target="_blank">پایگاه انگلیسی</a>
+    <a href="https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en" target="_blank">گوگل اسکالر</a>
+    <a href="https://orcid.org/0000-0001-8508-4837" target="_blank">اورکید</a>
   </div>
 
   <div class="frame-wrapper">
