--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مسیر من: روایتی بر زندگی دکتر سعید مجتبی زاده</title>
+  <title>مسیر من: روایتی از زندگی دکتر سعید مجتبی زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
   <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
@@ -196,7 +196,7 @@
 
   <div class="title-wrapper">
     <h1 class="title-line">پایگاه مسیر من</h1>
-    <h2 class="title-sub">روایتی بر زندگی دکتر سعید مجتبی زاده</h2>
+    <h2 class="title-sub">روایتی از زندگی دکتر سعید مجتبی زاده</h2>
   </div>
 
   <div class="link-bar">
