--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مسیر من: روایتی از زندگی دکتر سعید مجتبی زاده</title>
+  <title>دکتر سعید مجتبی‌زاده | علم، اندیشه و نوآوری</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
-  <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
+  <meta name="description" content="پایگاه رسمی دکتر سعید مجتبی‌زاده | علم، اندیشه و نوآوری در ژئوتکنیک و پژوهش‌های علمی.">
+  <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
-
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
 
@@ -16,67 +15,81 @@
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background-image: url('https://bayanbox.ir/view/6281946941252728307/Backgrond-2.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+      background: radial-gradient(circle at top, #1a1a1a, #000000);
+      overflow-x: hidden;
+      transition: all 0.6s ease-in-out;
+      color: white;
     }
 
+    /* پس‌زمینه ذرات متحرک */
+    #particles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background: transparent;
+    }
+
+    /* حلقه درخشان سه‌بعدی پروفایل */
     .profile-pic {
-      width: 160px;
-      height: 160px;
-      border-radius: 60% 40% 55% 45% / 50% 60% 40% 50%;
+      position: relative;
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
       overflow: hidden;
-      margin-bottom: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
-      animation: floatFrame 6s ease-in-out infinite;
+      margin: 30px auto 16px;
+      box-shadow: 0 0 40px rgba(255, 215, 100, 0.4);
+      transform-style: preserve-3d;
+      transition: transform 0.5s ease;
     }
-
+    .profile-pic:hover {
+      transform: rotateY(12deg) rotateX(8deg) scale(1.05);
+    }
     .profile-pic img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 50%;
       display: block;
+      position: relative;
+      z-index: 2;
+    }
+    .profile-pic::before {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      width: calc(100% + 10px);
+      height: calc(100% + 10px);
+      border-radius: 50%;
+      background: conic-gradient(from 0deg, #fcd975, #ffbb33, #ff6f00, #fcd975);
+      animation: spin 6s linear infinite;
+      z-index: 1;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
-    @keyframes floatFrame {
-      0% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-6px) rotate(1deg); }
-      100% { transform: translateY(0) rotate(0deg); }
-    }
-
+    /* عنوان و زیرعنوان */
     .title-wrapper {
       text-align: center;
       margin-bottom: 16px;
-      animation: fadeInUp 0.8s ease-out forwards;
+      animation: fadeInUp 1s ease-out forwards;
       opacity: 0;
       transform: translateY(-20px);
     }
-
     .title-line {
-      font-size: 2.4rem;
+      font-size: 2.6rem;
       font-weight: 800;
-      margin: 0;
-      background: radial-gradient(circle at center, #ffeec0, #ffcf70, #f0bb43);
-      background-clip: text;
+      background: linear-gradient(90deg, #fff2a8, #ffc94d, #ffb400);
       -webkit-background-clip: text;
-      color: transparent;
       -webkit-text-fill-color: transparent;
-      animation: pulseShine 4s ease-in-out infinite;
-      text-shadow: 0 0 8px rgba(255, 211, 108, 0.6), 0 0 18px rgba(255, 211, 108, 0.3);
+      text-shadow: 0 0 18px rgba(255, 211, 108, 0.6);
+      animation: glowPulse 4s ease-in-out infinite;
     }
-
-    @keyframes pulseShine {
-      0%, 100% { text-shadow: 0 0 8px rgba(255,211,108,0.6); }
-      50% { text-shadow: 0 0 18px rgba(255,211,108,0.9); }
-    }
-
     .title-sub {
       font-size: 1.2rem;
       color: #ffddaa;
@@ -84,20 +97,24 @@
       margin-top: 4px;
       text-shadow: 0 1px 3px rgba(0,0,0,0.5);
     }
+    @keyframes glowPulse {
+      0%, 100% { text-shadow: 0 0 10px rgba(255,211,108,0.6); }
+      50% { text-shadow: 0 0 22px rgba(255,211,108,1); }
+    }
 
+    /* لینک‌ها */
     .link-bar {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 12px;
       margin-bottom: 12px;
-      animation: fadeInUp 1s ease-out forwards;
+      animation: fadeInUp 1.4s ease-out forwards;
       opacity: 0;
       transform: translateY(-20px);
     }
-
     .link-bar a {
-      background: rgba(255,255,255,0.15);
+      background: rgba(255,255,255,0.12);
       color: white;
       padding: 10px 18px;
       border-radius: 30px;
@@ -106,14 +123,15 @@
       font-size: 0.95rem;
       backdrop-filter: blur(3px);
       transition: all 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      box-shadow: 0 0 10px rgba(255,200,100,0.3);
     }
-
     .link-bar a:hover {
-      background: rgba(255,255,255,0.3);
+      background: rgba(255,255,255,0.25);
+      box-shadow: 0 0 20px rgba(255,200,100,0.7);
       transform: translateY(-3px);
     }
 
+    /* ویدیو */
     .frame-wrapper {
       position: relative;
       width: 95%;
@@ -122,13 +140,12 @@
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 12px 40px rgba(0,0,0,0.5);
-      animation: fadeInUp 1.2s ease-out forwards;
+      animation: fadeInUp 1.6s ease-out forwards;
       opacity: 0;
       transform: translateY(20px);
       background: rgba(0,0,0,0.25);
       backdrop-filter: blur(6px);
     }
-
     .frame-wrapper iframe {
       position: absolute;
       top: 0;
@@ -140,12 +157,38 @@
       border-radius: 20px;
     }
 
+    /* فوتر */
     .footer {
       margin-top: 24px;
       color: white;
       font-size: 0.9rem;
       opacity: 0.7;
       text-align: center;
+    }
+
+    /* دکمه تغییر زبان */
+    .lang-switch {
+      position: fixed;
+      top: 16px;
+      left: 16px;
+      display: flex;
+      gap: 6px;
+      z-index: 999;
+    }
+    .lang-switch button {
+      background: rgba(255,255,255,0.2);
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 0.9rem;
+      transition: all 0.4s ease;
+    }
+    .lang-switch button:hover {
+      background: rgba(255,255,255,0.4);
+      transform: scale(1.1);
     }
 
     @keyframes fadeInUp {
@@ -156,50 +199,30 @@
     }
 
     @media (max-width: 768px) {
-      .profile-pic {
-        width: 120px;
-        height: 120px;
-      }
-
-      .title-line {
-        font-size: 1.6rem;
-      }
-
-      .title-sub {
-        font-size: 1rem;
-      }
-
-      .link-bar a {
-        font-size: 0.85rem;
-        padding: 8px 14px;
-      }
-
-      .frame-wrapper {
-        border-radius: 16px;
-      }
-
-      .frame-wrapper iframe {
-        border-radius: 16px;
-      }
-
-      .footer {
-        font-size: 0.8rem;
-        margin-top: 16px;
-      }
+      .profile-pic {width: 130px; height: 130px;}
+      .title-line {font-size: 2rem;}
+      .title-sub {font-size: 1rem;}
     }
   </style>
 </head>
 <body>
+  <canvas id="particles"></canvas>
+
+  <div class="lang-switch">
+    <button onclick="switchLang('fa')">Fa</button>
+    <button onclick="switchLang('en')">En</button>
+  </div>
+
   <div class="profile-pic">
     <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line">پایگاه مسیر من</h1>
-    <h2 class="title-sub">روایتی از زندگی دکتر سعید مجتبی زاده</h2>
+    <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
+    <h2 class="title-sub" id="sub-title">علم، اندیشه و نوآوری</h2>
   </div>
 
-  <div class="link-bar">
+  <div class="link-bar" id="links">
     <a href="http://mojtabazadeh.ir/" target="_blank">پایگاه شخصی</a>
     <a href="http://www.drmojtabazadeh.ir/" target="_blank">پایگاه مقالات</a>
     <a href="http://www.smojtabazadeh.ir/" target="_blank">پایگاه مطالعات</a>
@@ -211,18 +234,74 @@
   </div>
 
   <div class="frame-wrapper">
-    <iframe
-      src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
-      allow="autoplay; fullscreen"
-      allowfullscreen
-      title="مستند زندگی دکتر سعید مجتبی زاده">
-    </iframe>
+    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false" allow="autoplay; fullscreen" allowfullscreen title="مستند زندگی دکتر سعید مجتبی زاده"></iframe>
   </div>
 
-  <div class="footer">
+  <div class="footer" id="footer">
     © <a href="http://www.mojtabazadeh.ir/" target="_blank" style="color: white; text-decoration: none; font-weight: 500;">
       Saeed Mojtabazadeh | www.mojtabazadeh.ir
     </a>
   </div>
+
+  <script>
+    /* تغییر زبان */
+    const data = {
+      fa: {
+        title: "دکتر سعید مجتبی‌زاده",
+        sub: "علم، اندیشه و نوآوری",
+        links: ["پایگاه شخصی","پایگاه مقالات","پایگاه مطالعات","پایگاه اینستاگالری","پایگاه اَپرچِر","پایگاه انگلیسی","گوگل اسکالر","پایگاه اورکید"]
+      },
+      en: {
+        title: "Dr. Saeed Mojtabazadeh",
+        sub: "Science, Insights & Innovation",
+        links: ["Personal Website","Research Articles","Study Hub","Instagallery","Aperture Hub","English Site","Google Scholar","ORCID Profile"]
+      }
+    };
+    function switchLang(lang) {
+      document.body.style.opacity = 0;
+      setTimeout(() => {
+        document.getElementById("main-title").innerText = data[lang].title;
+        document.getElementById("sub-title").innerText = data[lang].sub;
+        const linkTexts = document.querySelectorAll("#links a");
+        linkTexts.forEach((a, i) => a.innerText = data[lang].links[i]);
+        document.body.style.opacity = 1;
+      }, 500);
+    }
+
+    /* افکت ذرات */
+    const canvas = document.getElementById("particles");
+    const ctx = canvas.getContext("2d");
+    let particles = [];
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+    for (let i = 0; i < 80; i++) {
+      particles.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        r: Math.random() * 2 + 1,
+        dx: (Math.random() - 0.5) * 0.5,
+        dy: (Math.random() - 0.5) * 0.5
+      });
+    }
+    function drawParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "rgba(255, 220, 150, 0.8)";
+      particles.forEach(p => {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+        ctx.fill();
+        p.x += p.dx;
+        p.y += p.dy;
+        if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
+        if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
+      });
+      requestAnimationFrame(drawParticles);
+    }
+    drawParticles();
+  </script>
 </body>
 </html>
