--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
+  
+  <!-- فونت فارسی و لاتین -->
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background: radial-gradient(circle at top, #1a1a1a, #000000);
+      background: #000; /* یکدست مشکی */
       overflow-x: hidden;
-      transition: all 0.6s ease-in-out;
       color: white;
+      transition: opacity 0.6s ease-in-out;
     }
 
     /* پس‌زمینه ذرات متحرک */
@@ -32,14 +34,14 @@
       background: transparent;
     }
 
-    /* حلقه درخشان سه‌بعدی پروفایل */
+    /* پروفایل سه‌بعدی */
     .profile-pic {
       position: relative;
       width: 180px;
       height: 180px;
       border-radius: 50%;
       overflow: hidden;
-      margin: 30px auto 16px;
+      margin: 30px auto 8px; /* فاصله کمتر با عنوان */
       box-shadow: 0 0 40px rgba(255, 215, 100, 0.4);
       transform-style: preserve-3d;
       transition: transform 0.5s ease;
@@ -73,15 +75,16 @@
       100% { transform: rotate(360deg); }
     }
 
-    /* عنوان و زیرعنوان */
+    /* عنوان */
     .title-wrapper {
       text-align: center;
-      margin-bottom: 16px;
+      margin-bottom: 12px;
       animation: fadeInUp 1s ease-out forwards;
       opacity: 0;
       transform: translateY(-20px);
     }
     .title-line {
+      font-family: 'Orbitron','Vazirmatn',sans-serif;
       font-size: 2.6rem;
       font-weight: 800;
       background: linear-gradient(90deg, #fff2a8, #ffc94d, #ffb400);
@@ -89,12 +92,13 @@
       -webkit-text-fill-color: transparent;
       text-shadow: 0 0 18px rgba(255, 211, 108, 0.6);
       animation: glowPulse 4s ease-in-out infinite;
+      margin-bottom: 4px; /* نزدیک شدن زیرعنوان */
     }
     .title-sub {
-      font-size: 1.2rem;
+      font-size: 1.15rem;
       color: #ffddaa;
-      font-weight: 500;
-      margin-top: 4px;
+      font-weight: 600;
+      margin-top: 0;
       text-shadow: 0 1px 3px rgba(0,0,0,0.5);
     }
     @keyframes glowPulse {
@@ -131,9 +135,12 @@
       transform: translateY(-3px);
     }
 
-    /* ویدیو */
+    /* ویدیو در مرکز */
     .frame-wrapper {
-      position: relative;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 95%;
       max-width: 1024px;
       aspect-ratio: 16 / 9;
@@ -147,9 +154,6 @@
       backdrop-filter: blur(6px);
     }
     .frame-wrapper iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       border: none;
@@ -172,23 +176,43 @@
       top: 16px;
       left: 16px;
       display: flex;
-      gap: 6px;
+      gap: 8px;
       z-index: 999;
     }
     .lang-switch button {
-      background: rgba(255,255,255,0.2);
+      position: relative;
+      background: rgba(255,255,255,0.15);
       color: white;
       border: none;
-      padding: 6px 12px;
-      border-radius: 6px;
+      padding: 8px 14px;
+      border-radius: 50px;
       cursor: pointer;
-      font-weight: 600;
+      font-weight: 700;
       font-size: 0.9rem;
-      transition: all 0.4s ease;
+      transition: all 0.3s ease;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(255,215,0,0.3);
     }
     .lang-switch button:hover {
-      background: rgba(255,255,255,0.4);
+      background: rgba(255,255,255,0.3);
+      box-shadow: 0 0 20px rgba(255,215,0,0.7);
       transform: scale(1.1);
+    }
+    .lang-switch button:after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 50%;
+      left: 50%;
+      background: rgba(255,215,0,0.3);
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      transition: width 0.5s ease, height 0.5s ease;
+    }
+    .lang-switch button:active:after {
+      width: 120px;
+      height: 120px;
     }
 
     @keyframes fadeInUp {
@@ -237,14 +261,13 @@
     <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false" allow="autoplay; fullscreen" allowfullscreen title="مستند زندگی دکتر سعید مجتبی زاده"></iframe>
   </div>
 
-  <div class="footer" id="footer">
+  <div class="footer">
     © <a href="http://www.mojtabazadeh.ir/" target="_blank" style="color: white; text-decoration: none; font-weight: 500;">
       Saeed Mojtabazadeh | www.mojtabazadeh.ir
     </a>
   </div>
 
   <script>
-    /* تغییر زبان */
     const data = {
       fa: {
         title: "دکتر سعید مجتبی‌زاده",
@@ -265,7 +288,7 @@
         const linkTexts = document.querySelectorAll("#links a");
         linkTexts.forEach((a, i) => a.innerText = data[lang].links[i]);
         document.body.style.opacity = 1;
-      }, 500);
+      }, 400);
     }
 
     /* افکت ذرات */
