--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
   <script>
     const data = {
       fa: {
-        title: "مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده",
-        sub: "علم، اندیشه و نوآوری",
+        title: "مسیر علم و زندگی",
+        sub: "روایت دکتر سعید مجتبی‌زاده",
         links: [
           { text: "پایگاه شخصی", href: "http://mojtabazadeh.ir/" },
           { text: "پایگاه مقالات", href: "http://www.drmojtabazadeh.ir/" },
