--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
         ],
       },
       en: {
-        title: "The Journey of Science and Life: The Story of Dr. Saeed Mojtabazadeh",
-        sub: "Science, Insights & Innovation",
+        title: "The Journey of Science and Life",
+        sub: "The Story of Dr. Saeed Mojtabazadeh",
         links: [
           { text: "Personal Website", href: "http://mojtabazadeh.ir/" },
           { text: "Research Articles", href: "http://www.drmojtabazadeh.ir/" },
