--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line" id="main-title">مسیر علم و زندگی: روایت دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">علم، اندیشه و نوآوری</h2>
+    <h1 class="title-line" id="main-title">مسیر علم و زندگی</h1>
+    <h2 class="title-sub" id="sub-title">روایت دکتر سعید مجتبی‌زاده</h2>
   </div>
 
   <div class="link-bar" id="links">
